# European-Power-Fair-Value-Forecasting-Pipeline

./: .env.example  .gitignore  Makefile  README.md  REPORT.md  app.py  pyproject.toml  requirements.txt  run_pipeline.py
outputs/: delivery_views.csv  llm_qa_log.json  qa_report.json  submission.csv  trading_signal.json
src/cobblestone/: __init__.py  config.py  pipeline.py  plots.py
src/cobblestone/curve/: translation.py
src/cobblestone/features/: engineer.py
src/cobblestone/ingestion/: entsoe_client.py  smard.py
src/cobblestone/models/: baseline.py  forecaster.py
src/cobblestone/quality/: llm_qa.py  standard_qa.py
