[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cobblestone-power-forecast"
version = "0.1.0"
description = "European power fair-value forecasting pipeline"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.3",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyarrow>=14.0",
    "rich>=13.0",
    "streamlit>=1.28",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0", "ipykernel>=6.0", "ipywidgets>=8.0"]
entsoe = ["entsoe-py>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
